k8s-traefik/car/service.yml
apiVersion: v1
kind: Service
metadata:
  name: car
spec:
  selector:
    app: car
  type: NodePort
  ports:
    - port: 80
      targetPort: 8000
